fix for cropper

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -58,6 +58,7 @@
 .crop-holder{ 
   width: 950px;
   margin: 0 auto;
+  > img{ width: 950px;}
 }
 
 //---------------------------------------------------------------------------------------------
@@ -113,19 +114,21 @@
 
 
 
+
+
+
   // Cycle through sizes
   @for $i from 2 through 27 {
     @media screen and (min-width: ($i * ($column + $gutter) - $gutter) / $em) { 
-      .container[role="main"]:before{
-        content: 'cols' + $i;
-        position: fixed;
-        top: 0; left: 0;
-        padding: 0 .5em;
-        color: $pink;
-      }
+      .container[role="main"]:before{ content: 'cols' + $i; }
     }
   }
-
+  .container[role="main"]:before{
+    position: fixed;
+    top: 0; left: 0;
+    padding: 0 .5em;
+    color: $pink;
+  }
 
 
 
